--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.18.2",
-        "npm-git-install": "^0.3.0"
+        "npm-git-install": "^0.3.0",
+        "puppeteer": "^19.4.0"
     }
 }
