--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "chromium": "^3.0.3",
         "express": "^4.18.2",
         "npm-git-install": "^0.3.0",
         "puppeteer": "^17.1.3"
