--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
         "chromium": "^3.0.3",
         "express": "^4.18.2",
         "npm-git-install": "^0.3.0",
-        "puppeteer": "^17.1.3"
+        "puppeteer": "17.1.3"
     }
 }
