--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "chromium": "^3.0.3",
         "express": "^4.18.2",
         "npm-git-install": "^0.3.0",
-        "puppeteer": "17.1.3"
+        "puppeteer": "^19.4.0"
     }
 }
